--- a/inner.html
+++ b/inner.html
@@ -5,19 +5,17 @@
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./script.js"></script>
 </head>
 
 <body>
-    <script src="./script.js"></script>
     <div class="header">
         <h1>Weather Dashboard</h1>
     </div>
     <div class="search-area">
         <h3>Search for a city:</h3>
         <form id="form" role="search">
-            <input type="search" id="query" name="q"
-             placeholder="Search..."
-             aria-label="Search through site content">
+            <input type="search" id="query" placeholder="Search..."aria-label="Search through site content">
             <button>
                 <svg viewBox="0 0 1024 1024">
                     <path class="path1" d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
