--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </form>
     </div>
     <div class="city-info">
-        <h3>City Name:</h3>
-        <p>Date:</p>
-        <p>Temperature:</p>
-        <p>Wind Speed:</p>
-        <p>Uv Index:</p>
+        <h3 id="ci-name">City Name:</h3>
+        <p id="ci-date">Date:</p>
+        <p id="ci-temp">Temperature:</p>
+        <p id="ci-windSpeed">Wind Speed:</p>
+        <p id="ci-uvi">Uv Index:</p>
     </div>
-    <div class= "five-day">
+    <div id="five-day">
         <h3>5-day Forcast:</h3>
     </div>    
    
