--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <p id="ci-date">Date:</p>
         <p id="ci-temp">Temperature:</p>
         <p id="ci-windSpeed">Wind Speed:</p>
-        <p id="ci-uvi">Uv Index:</p>
+        <p id="ci-uvi">UV Index:</p>
     </div>
+    <h3>5-day Forcast:</h3>
     <div id="five-day">
-        <h3>5-day Forcast:</h3>
     </div>    
    
 </body> 
